New utility!
GammaLib now contains the `ObfuscatedClassHandler`, which can map class names to their obfuscated or deobfuscated names *at runtime*!

This new utility also heavily improves the `ClassHierarchyUtil`, as it now fully supports obfuscated clients (previously could not read class bytes of obfuscated game files due to resource location mismatches).